app/src/main/java/com/example/basearchitecture/data/models/error/IAppError.kt
package com.example.basearchitecture.data.models.error

/**
 * IAppError
 */
interface IAppError